[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/Halter.gd" type="Script" id=1]
[ext_resource path="res://sprites/halter.png" type="Texture" id=2]
[ext_resource path="res://sounds/item bom (1).wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38, 24.5 )

[node name="Halter" type="Area2D"]
position = Vector2( 320, 211 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 12.5 )
shape = SubResource( 1 )

[node name="HalterSprite" type="Sprite" parent="."]
position = Vector2( 14, 14 )
scale = Vector2( 0.238594, 0.260346 )
texture = ExtResource( 2 )

[node name="CollectedSoundGood" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 24 )
stream = ExtResource( 3 )
volume_db = 15.0

[connection signal="body_entered" from="." to="." method="_on_Halter_body_entered"]
